# controle-caixa-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: tauri.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: MonthPicker.tsx  MonthlyComparison.tsx  Sidebar.tsx  SummaryCards.tsx  ToastStack.tsx  Topbar.tsx  TransactionModal.tsx  TransactionTable.tsx  VisibilityToggle.tsx
src/lib/: format.ts  tauriApi.ts  tauriEnv.ts
src/pages/: Config.tsx  Entradas.tsx  Fluxo.tsx  Metas.tsx  Notificacoes.tsx  Perfil.tsx  Relatorios.tsx  Saidas.tsx
